k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: carexes-mtls
  namespace: carexes
spec:
  mtls:
    mode: STRICT
